meecast (0.6.7) unstable; urgency=low

  * Added icon to hko.gov.hk

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 09 Oct 2012 11:41:23 +0200

meecast (0.6.6) unstable; urgency=low

  * Fixed problem Shiny and SimpelMee iconsets 
  * Fixed problem with ContextKit (description and station text) for BillBoard
    application

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 09 Oct 2012 11:41:23 +0200

meecast (0.6.5) unstable; urgency=low

  * Fixed problem with nil description 
  * Returned station Brisbane (Qld) in the bom.gov.au source
  * Updated icon pack "SimpelMee". Thanks Kim Venetvirta
  * Moved station Broome to region Western Australia in bom.gov.au
  * Removed first Sydney from bom.gov.au
  * Fixed problem with coordinaties of Italy stations in source weather.com 
  * Updated Albanian, Catalan, Vietnamese, Chinese, Dutch translations
  * Disabled debug information for applet
  * Added station Kouvola(Finland) to source weather.com
  * Added Swiss to foreca.com database

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 07 Oct 2012 15:41:23 +0200

meecast (0.6.4) unstable; urgency=low

  * Fixed segmentation fault  
  * Fixed problem with detail URL and map URL

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 28 Sep 2012 09:41:23 +0200

meecast (0.6.3) unstable; urgency=low

  * Fixed bug that crashed Meecast with nil config on launch  

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 27 Sep 2012 14:42:23 +0200

meecast (0.6.2) unstable; urgency=low

  * Updated Finish, Dutch, Portuguese, Turkish, Vietnamese translations
  * Added icons for hko.gov.hk
  * Added dbus method GetCurrentWeather to applet. For Lockscreen application
  * Removed Adelaide, Brisbane, Cairns, Canberra, Darwin, Hobart, Newcastle,
    Perth and Sydney from the Victoria entry in the bom.gov.au source.
  * Added Map of Weather for weather.com source
  * Added Catalan translation. Thanks Agustí Clara

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 26 Sep 2012 22:42:23 +0200

meecast (0.6.1) unstable; urgency=low

  * Added icons for hko.gov.hk